[package]
name = "awuba-iot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["ws"] }
btsensor = "0.1.2"
config = "0.15.25"
hashlink = "0.12.0"
prost = "0.14.4"
rumqttc = "0.25.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.7.0", features = ["trace", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "std"] }
trouble-host = "0.7.0"
uuid = "1.23.4"

[build-dependencies]
prost-build = "0.14.4"
